--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="heading">Working hard to have a big impact</div>
         <div class="main">
-            <a class="contents" href="https://www.google.com/search?q=simple+picture+with+color+background&sca_esv=590892788&tbm=isch&sxsrf=AM9HkKmTV909orV2SNCcVdpORz-UlC-mAw:1702560701111&source=lnms&sa=X&ved=2ahUKEwjI_LDuhI-DAxX9k1YBHdBGDXsQ_AUoAXoECAEQAw&biw=1536&bih=695&dpr=1.25#imgrc=EVXHPH5hrlkHUM">
+            <a class="contents" target='_blank' href="https://www.google.com/search?q=simple+picture+with+color+background&sca_esv=590892788&tbm=isch&sxsrf=AM9HkKmTV909orV2SNCcVdpORz-UlC-mAw:1702560701111&source=lnms&sa=X&ved=2ahUKEwjI_LDuhI-DAxX9k1YBHdBGDXsQ_AUoAXoECAEQAw&biw=1536&bih=695&dpr=1.25#imgrc=EVXHPH5hrlkHUM">
                 <img src="https://images.pexels.com/photos/1037993/pexels-photo-1037993.jpeg?cs=srgb&dl=pexels-moose-photos-1037993.jpg&fm=jpg">
             </a>
             <a class="contents">
