--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
         </div>
         <div class="heading">Working hard to have a big impact</div>
         <div class="main">
-            <a class="contents" target='_blank' href="https://www.google.com/search?q=simple+picture+with+color+background&sca_esv=590892788&tbm=isch&sxsrf=AM9HkKmTV909orV2SNCcVdpORz-UlC-mAw:1702560701111&source=lnms&sa=X&ved=2ahUKEwjI_LDuhI-DAxX9k1YBHdBGDXsQ_AUoAXoECAEQAw&biw=1536&bih=695&dpr=1.25#imgrc=EVXHPH5hrlkHUM">
+            <a class="contents" href="https://www.google.com/search?q=simple+picture+with+color+background&sca_esv=590892788&tbm=isch&sxsrf=AM9HkKmTV909orV2SNCcVdpORz-UlC-mAw:1702560701111&source=lnms&sa=X&ved=2ahUKEwjI_LDuhI-DAxX9k1YBHdBGDXsQ_AUoAXoECAEQAw&biw=1536&bih=695&dpr=1.25#imgrc=EVXHPH5hrlkHUM" target="_blank">
                 <img src="https://images.pexels.com/photos/1037993/pexels-photo-1037993.jpeg?cs=srgb&dl=pexels-moose-photos-1037993.jpg&fm=jpg">
             </a>
             <a class="contents">
                 <img src="https://i.pinimg.com/736x/11/41/1f/11411f1d5db00f4ae29b390911cb2f7b.jpg">
             </a>
             <a class="contents">
-                <img src="https://images.unsplash.com/photo-1586439702132-55ce0da661dd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8&w=1000&q=80">
+                <img src="https://images.unsplash.com/photo-1586439702132-55ce0da661dd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE5fHx8ZW58MHx8fHx8&w=1000&q=80" target="_blank">
             </a>
         </div>
     </div>
